--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,34 @@
 version: "3.8"
 services:
   frontend:
+    container_name: frontend
     build:
-      context: ./frontend
-      dockerfile: Dockerfile.dev
+      context: ./docker/services/frontend
+    tty: true
     volumes:
-      - /app/node_modules
-      - ./frontend:/app
+      - ./frontend:/var/app
     ports:
       - "3000:3000"
-  api:
-    container_name: api
-    build:
-      context: ./backend
-      dockerfile: Dockerfile.dev
-    tty: true
-    ports:
-      - "3001:3001"
-    volumes:
-      - type: bind
-        source: .
-        target: /api
-  mysql:
-    image: mysql/mysql-server:5.7
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-    ports:
-      - "3307:3307"
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: develop
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-    volumes:
-      - /var/lib/mysql
+  # api:
+  #   container_name: api
+  #   build:
+  #     context: ./docker/services/backend
+  #   tty: true
+  #   ports:
+  #     - "3001:3001"
+  #   volumes:
+  #     - type: bind
+  #       source: .
+  #       target: /api
+  # mysql:
+  #   image: mysql/mysql-server:5.7
+  #   command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+  #   ports:
+  #     - "3307:3307"
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: password
+  #     MYSQL_DATABASE: develop
+  #     MYSQL_USER: user
+  #     MYSQL_PASSWORD: password
+  #   volumes:
+  #     - /var/lib/mysql
