--- a/docker/services/backend/Dockerfile
+++ b/docker/services/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:alpine
-WORKDIR /app
+# WORKDIR /app
 # COPY ../backend/../services/../docker/./backend/package.json ./
 # RUN npm install
 # COPY ../backend/../services/../docker/./backend ./
