DONE: Fixed an ERROR [TypeOrmModule] Unable to connect to the database. Retrying (2)

--- a/docker/services/backend/Dockerfile
+++ b/docker/services/backend/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:alpine
+RUN apk add mysql mysql-client
 # WORKDIR /app
 # COPY ../backend/../services/../docker/./backend/package.json ./
 # RUN npm install
