--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,10 @@ services:
     ports:
       - "3000:3000"
   backend:
+    networks:
+      - netBackendMysql
+    depends_on:
+      - mysql
     container_name: backend
     build:
       context: ./docker/services/backend
@@ -39,15 +43,20 @@ services:
     ports:
       - "3001:3001"
   mysql:
+    networks:
+      - netBackendMysql
     container_name: mysql
     image: mysql/mysql-server:5.7
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     ports:
       - "3307:3307"
     environment:
+      MYSQL_HOST: mysql
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: develop
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
       - /var/lib/mysql
+networks:
+  netBackendMysql:
