--- a/docker/services/backend/Dockerfile
+++ b/docker/services/backend/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:alpine
 RUN apk add mysql mysql-client
-# WORKDIR /app
-# COPY ../backend/../services/../docker/./backend/package.json ./
-# RUN npm install
-# COPY ../backend/../services/../docker/./backend ./
-# CMD ["npm", "run", "start:dev"]
+WORKDIR /var/backend
+COPY ./backend .
+RUN npm install
+CMD ["npm", "run", "start:dev"]
