--- a/docker/services/frontend/Dockerfile
+++ b/docker/services/frontend/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:alpine
-# WORKDIR /var/frontend
-# RUN npm install
-# CMD ["npm", "run", "dev"]
+WORKDIR /var/frontend
+COPY ./frontend .
+RUN npm install
+CMD ["npm", "run", "dev"]
