--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - "3001:3001"
   mysql:
-    env_file: mysql.env
+    env_file: ./docker/environments/mysql.env
     networks:
       - network
     container_name: mysql
