--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,53 +3,36 @@ services:
   frontend:
     container_name: frontend
     build:
-      context: ./docker/services/frontend
-    tty: true
+      context: .
+      dockerfile: docker/services/frontend/Dockerfile
     volumes:
       - ./frontend:/var/frontend
     working_dir: /var/frontend
-    entrypoint:
-      - sh
-    command:
-      - -c
-      - |
-        [ -f ~/.frontend-exec-once ] || {
-          cd /var/frontend npm install && touch ~/.frontend-exec-once
-        }
-        cd /var/frontend && npm run dev
     ports:
       - "3000:3000"
   backend:
     networks:
-      - netBackendMysql
+      - edgex
     depends_on:
       - mysql
     container_name: backend
     build:
-      context: ./docker/services/backend
-    tty: true
+      context: .
+      dockerfile: docker/services/backend/Dockerfile
     volumes:
       - ./backend:/var/backend
     working_dir: /var/backend
-    entrypoint:
-      - sh
-    command:
-      - -c
-      - |
-        [ -f ~/.backend-exec-once ] || {
-          cd /var/backend npm install && touch ~/.backend-exec-once
-        }
-        cd /var/backend && npm run start:dev
     ports:
       - "3001:3001"
   mysql:
+    env_file: ./docker/environments/mysql.env
     networks:
-      - netBackendMysql
+      - edgex
     container_name: mysql
     image: mysql/mysql-server:5.7
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     ports:
-      - "3307:3307"
+      - "3307:3306"
     environment:
       MYSQL_HOST: mysql
       MYSQL_ROOT_PASSWORD: password
@@ -59,4 +42,4 @@ services:
     volumes:
       - /var/lib/mysql
 networks:
-  netBackendMysql:
+  edgex:
