--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-google-login": "^5.2.2"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
