--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-google-login": "^5.2.2"
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
