--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
