--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0",
     "remark-gfm": "^3.0.1",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "use-media": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
