--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0",
+    "react-query": "^3.34.19",
     "remark-gfm": "^3.0.1",
     "sass": "^1.49.9",
     "use-media": "^1.4.0",
