--- a/docker/services/frontend/Dockerfile
+++ b/docker/services/frontend/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:alpine
 WORKDIR /var/frontend
 COPY ./frontend .
-RUN npm install
+# RUN npm install
+RUN npm install && \
+  mv ./node_modules /
 CMD ["npm", "run", "dev"]
