--- a/docker/services/backend/Dockerfile
+++ b/docker/services/backend/Dockerfile
@@ -2,7 +2,5 @@ FROM node:alpine
 RUN apk add mysql mysql-client
 WORKDIR /var/backend
 COPY ./backend .
-# RUN npm install
-RUN npm install && \
-  mv ./node_modules /
+RUN npm install 
 CMD ["npm", "run", "start:dev"]
