--- a/docker/services/frontend/Dockerfile
+++ b/docker/services/frontend/Dockerfile
@@ -1,6 +1,5 @@
 FROM node:alpine
 WORKDIR /var/frontend
 COPY ./frontend .
-RUN npm install && \
-  mv ./node_modules /
+RUN npm install 
 CMD ["npm", "run", "dev"]
