--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
+    "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "next": "^12.1.0",
     "react": "17.0.2",
@@ -18,7 +19,8 @@
     "react-markdown": "^8.0.0",
     "remark-gfm": "^3.0.1",
     "sass": "^1.49.9",
-    "use-media": "^1.4.0"
+    "use-media": "^1.4.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
