--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "next": "^12.1.0",
